--- a/index.html
+++ b/index.html
@@ -5,8 +5,309 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+
+    <header>
+
+    </header>
+
+    <main>
+
+        <div class="container">
+
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            <section class="icon">
+
+                <img class="image" src="sample.jpg" alt="">
+
+                <div class="name-tag">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+
+            </section>
+            
+
+        </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
