--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 
     <header>
 
+        <div class="speaker-view">
+            
+            <i class="fa-solid fa-table-cells"></i>
+            <span>Speaker View</span> 
+
+        </div>
+
+        <div class="enlarge">
+            <i class="fa-solid fa-maximize"></i>
+        </div>
+
     </header>
 
     <main>
