--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <i class="fa-solid fa-table-cells"></i>
                 <span>Speaker View</span>
-                
+
         </div>
 
         <div class="enlarge">
@@ -322,6 +322,20 @@
         <div class="container">
 
             <div class="audio-video">
+                <div class="btn">
+
+                    <i class="fa-solid fa-microphone icona"></i>
+                    <div class="description">Mute</div>
+                    <i class="fa-solid fa-chevron-up"></i>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- <div class="container">
+
+            <div class="audio-video">
+
                 <div class="mic">
                     <i class="fa-solid fa-microphone"></i>
                     <div>Mute</div>
@@ -388,7 +402,7 @@
                 End Meeting
             </div>
 
-        </div>
+        </div> -->
 
     </footer>
     
